@@ -1,0 +1,64 @@
+// Copyright (c) 2004  Utrecht University (The Netherlands),
+// ETH Zurich (Switzerland), Freie Universitaet Berlin (Germany),
+// INRIA Sophia-Antipolis (France), Martin-Luther-University Halle-Wittenberg
+// (Germany), Max-Planck-Institute Saarbruecken (Germany), RISC Linz (Austria),
+// and Tel-Aviv University (Israel).  All rights reserved.
+//
+// This file is part of CGAL (www.cgal.org); you can redistribute it and/or
+// modify it under the terms of the GNU Lesser General Public License as
+// published by the Free Software Foundation; version 2.1 of the License.
+// See the file LICENSE.LGPL distributed with CGAL.
+//
+// Licensees holding a valid commercial license may use this file in
+// accordance with the commercial license agreement provided with the software.
+//
+// This file is provided AS IS with NO WARRANTY OF ANY KIND, INCLUDING THE
+// WARRANTY OF DESIGN, MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE.
+//
+// $Source$
+// $Revision$ $Date$
+// $Name$
+//
+// Author(s)     : Sylvain Pion
+
+// ---------------------------------------------------------------------
+// A short test program to evaluate a C++ compiler.
+// This program is used by cgal_configure.
+// The following documentation will be pasted in the generated configfile.
+// ---------------------------------------------------------------------
+
+//| This flag is set if the compiler bugs with some "using Base::Member;" in
+//| a derived class.  The workaround is to write a forwarder or not use using.
+//| At least SunPro CC 5.3 has this bug where the typical error message is :
+//| "Error: The function B<int>::g() has not had a body defined."
+//| Note that the subtlely is that the error message does not mention
+//| "Member"...
+
+struct A
+{
+  A() {}
+
+  void f() {}
+};
+
+template < class GT >
+struct B : A
+{
+  using A::f;
+
+  B() {}
+
+  void g();
+};
+
+template < class GT >
+void
+B<GT>::g()
+{}
+
+int main()
+{
+  B<int> b;
+  b.g();
+  return 0;
+}
