@@ -1,3 +1,6 @@
+22 May 2004 Sylvain Pion
+- Add CGAL_CFG_USING_BASE_MEMBER_BUG_2.C for SunPRO 5.3.
+
 20 May 2004 Sylvain Pion
 - Add CGAL_CFG_CONVERSION_OPERATOR_BUG.C to detect the bug in g++ 3.3.0.
 
